crates/compiler/src/tests/e2e/good/0405_struct_config/main.gom
struct Config {
    name: string,
    value: int32,
}

fn get_config() -> Config {
    Config { name: "test", value: 42 }
}

fn main() {
    println(get_config().name);
    println(get_config().value.to_string());
}
