crates/compiler/src/tests/e2e/bad/0564_go_method_missing_receiver/main.gom
extern "go" "time" "Time.String" moment_string() -> string

fn main() -> unit {
    ()
}
